<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">SamsangLockScreen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- mtek add begin -->
    <string name="lock_state_tip">Swipe screen to unlock</string>
    <string name="lock_state_missedtip">Swipe to check missed event</string>
    <string name="lock_state_icontip">Swipe shortcut to open APPs</string>
    <string name="lock_call">Mssed call</string>
    <string name="lock_call_count"><xliff:g id="num_missed_calls">%s</xliff:g> missed calls</string>
    <string name="lock_sms">Message</string>
    <string name="lock_sms_new">New message</string>
    <string name="lock_sms_count"><xliff:g id="num_missed_messages">%s</xliff:g> new messages</string>
    <string name="logo_text">心意合一</string>
    <string name="lock_settings">锁屏选项</string>
    <string name="lock_switch_fall">切换为水波纹</string>
    <string name="lock_switch_sun">切换为阳光效果</string>
    <string name="lock_setting_title">滑动选项</string>
    <string name="lock_setting_edit_user_info">编辑个人信息</string>
    <string name="store">存储</string>
    <string name="add_apps">添加应用程序</string>
    <string name="samsung_apps">常用应用程序</string>
    <string name="lock_setting_edit_short_cut">设置屏幕锁定时的快捷键</string>
    <string name="short_cut">快捷键</string>
    <string name="lock_setting_edit_short_cut_title">设置快捷方式</string>
    <string name="edit_short_cut_alert_one">设置屏幕锁定时的快捷键</string>
    <string name="edit_short_cut_alert_two">点击快捷方式分配应用程序.</string>
    <string name="edit_short_cut_alert_three">拖放以删除或更改顺序</string>
    <string name="delete">删除</string>
    <string name="select_apps">选择应用程序</string>
    <string name="sx_switch_on">"       "</string>
    <string name="sx_switch_off">"       "</string>
    <!-- mtek add end -->

</resources>