<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pond"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top_view"
        android:layout_width="wrap_content"
        android:layout_height="48dip"
        android:layout_alignParentTop="true"
        android:background="@drawable/activity_title_bar"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/tw_action_bar_icon_holo_dark"
            android:gravity="center_vertical"
            android:paddingLeft="5dip"
            android:text="@string/lock_setting_edit_user_info"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <View
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:background="@drawable/driver_settings_line" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/owner_info_actionbar_bg"
                android:paddingBottom="3dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="3dip"
                android:text="@android:string/cancel"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="1dip"
                android:layout_height="wrap_content"
                android:background="@drawable/driver_settings_line" />

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/owner_info_actionbar_bg"
                android:paddingBottom="3dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="3dip"
                android:text="@string/store"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/timelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_view"
        android:layout_gravity="top"
        android:layout_marginLeft="@dimen/keyguard_lockscreen_timelayout_margin"
        android:layout_marginRight="@dimen/keyguard_lockscreen_timelayout_margin"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:layout_marginTop="31dip"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:inputType="none"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/logo_text"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center_vertical" >

            <com.huanghua.samsanglockscreen.DigitalClock
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"  >

                <ImageView
                    android:id="@+id/ic_time_hour1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left" />

                <ImageView
                    android:id="@+id/ic_time_hour2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_toRightOf="@id/ic_time_hour1" />

                <ImageView
                    android:id="@+id/ic_time_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_toRightOf="@id/ic_time_hour2"
                    android:src="@drawable/keyguard_lockscreen_time_dot" />

                <ImageView
                    android:id="@+id/ic_time_minute1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_toRightOf="@id/ic_time_dot" />

                <ImageView
                    android:id="@+id/ic_time_minute2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_toRightOf="@id/ic_time_minute1" />

                <ImageView
                    android:id="@+id/ic_time_ampm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_toRightOf="@id/ic_time_minute2" />
            </com.huanghua.samsanglockscreen.DigitalClock>

            <CheckBox
                android:id="@+id/time_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:button="@drawable/checkbox_bg" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/datelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:layout_marginTop="2dip"
                android:shadowColor="#e6000000"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/date_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:button="@drawable/checkbox_bg" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timelayout"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="35dip"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/set_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/set_text_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:background="@drawable/set_text_color_bg"
                android:button="@null"
                android:checked="true" />

            <RadioButton
                android:id="@+id/set_text_bg_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/set_text_bg_color_bg"
                android:button="@null" />
        </RadioGroup>
    </LinearLayout>

    <com.huanghua.colorselecter.SansumColorSelecter
        android:id="@+id/color_seleter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="25dip" >
    </com.huanghua.colorselecter.SansumColorSelecter>

</RelativeLayout>